[package]
name = "irro"
version = "0.1.0"
authors = ["Martin Indra <martin.indra@mgn.cz>"]
edition = "2018"

[dependencies]
actix-web = "1.0.3"
serde = "1.0.94"
systemd = "0.4"

[dependencies.serialport]
version = "3.3.0"
default-features = false

[dependencies.log]
version = "0.4.6"
features = ["max_level_debug", "release_max_level_info"]

[lib]
name = "irro"
path = "src/lib.rs"

[[bin]]
name = "irro-cli"
path = "src/main.rs"
